--- a/text.html
+++ b/text.html
@@ -1,3 +1,3 @@
-<h1>This is heading 1</h1>
-<h2>This is heading 2</h2>
-<h3>This is heading 3</h3>
+<h1>Suresh</h1>
+<h2>Suresh</h2>
+<h3>Suresh</h3>
